--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Fun Bus Travel Agency - Solution</title>
 
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
-  <link href="css/index.css" rel="stylesheet">
+  <link rel="stylesheet/less" type="text/css" href="./less/index.less" />
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -69,6 +69,6 @@
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
   </footer>
-
+  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
 </body>
 </html>
